# django-ninja-task-manager

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
celery_layer/: celery_app.py  flower_config.py
core/: __init__.py  celery.py  settings.py  urls.py
tasks/: enums.py  exceptions.py  models.py  repository.py  schemas.py  tasks.py  tests.py  views.py
tasks/filters/: filter.py  ordering.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_negative.py  test_positive.py
users/: schemas.py
